# MAXINE-VFX-SDK

./: .gitignore  CHANGELOG  CMakeLists.txt  test_build.bat  version.h
samples/: CMakeLists.txt
samples/VideoEffectsApp-CLI/: CMakeLists.txt  VideoEffectsAppCLI.cpp
samples/VideoEffectsApp-GUI/: CMakeLists.txt  VideoEffectsAppGUI.cpp  VideoEffectsAppGUI.fl
samples/utils/: Converter.cpp
